--- a/.github/workflows/ios_beta_github.yml
+++ b/.github/workflows/ios_beta_github.yml
@@ -49,7 +49,7 @@ jobs:
   build:
     name: Run Classic and Killer Build
     needs: check-changes
-    if: needs.check-changes.outputs.should_run == 'true'
+    if: needs.check-changes.outputs.should_run == 'true' || github.event_name == 'workflow_dispatch'
     runs-on: macos-14
     timeout-minutes: 60
 
